c/examples/writing-a-c-compiler-tests/tests/chapter_8/invalid_semantics/break_not_in_loop.c
int main(void) {
    if (1)
        break;
}